# interop

./: .blast-radius.yaml  .gitignore  .release-plz.toml  AGENTS.md  Cargo.toml  Makefile.ci.toml  Makefile.toml  buf.rust.gen.yaml  buf.yaml  cliff.toml  skills-lock.json
.agents/skills/design/: SKILL.md
.cargo/: audit.toml
.claude/skills/: docs-knowledge-base  session-retro  style-prose
.github/: labeler.yml
.github/actions/unit-test/: action.yml
.github/workflows/: audit.yml  coverage.yml  doc.yml  pr-review-reminder.yml  proto-publish.yml  quality.yml  release.yml  skills-check.yml  test.yml
crates/agglayer-bincode/: CHANGELOG.md  Cargo.toml
crates/agglayer-bincode/src/: lib.rs
crates/agglayer-blockchain/: Cargo.toml
crates/agglayer-blockchain/src/: get_block_hash.rs
crates/agglayer-build/: Cargo.toml
crates/agglayer-build/sample-program/host/: Cargo.toml  build.rs
crates/agglayer-build/sample-program/host/elf/: riscv32im-succinct-zkvm-elf
crates/agglayer-build/sample-program/host/src/: lib.rs
crates/agglayer-build/sample-program/zkvm/: Cargo.toml
crates/agglayer-build/src/zkvm_build/: config.rs  mod.rs  mode.rs  program_builder.rs
crates/agglayer-elf-build/: CHANGELOG.md  Cargo.toml
crates/agglayer-elf-build/sample-program/host/: Cargo.toml  build.rs
crates/agglayer-elf-build/sample-program/host/elf/: riscv32im-succinct-zkvm-elf  riscv64im-succinct-zkvm-elf
crates/agglayer-elf-build/sample-program/host/src/: lib.rs
crates/agglayer-elf-build/sample-program/zkvm/: Cargo.toml
crates/agglayer-elf-build/sample-program/zkvm/src/: main.rs
crates/agglayer-elf-build/src/: lib.rs
crates/agglayer-elf-build/src/zkvm_build/: mod.rs  mode.rs  program_builder.rs
crates/agglayer-errors/: CHANGELOG.md  Cargo.toml
crates/agglayer-errors/src/: lib.rs
crates/agglayer-evm-client/: CHANGELOG.md  Cargo.toml
crates/agglayer-evm-client/src/: alloy_rpc.rs  get_block_hash.rs  get_block_number.rs  lib.rs  mock_rpc.rs
crates/agglayer-grpc-types/: Cargo.toml
crates/agglayer-grpc-types/src/: lib.rs
crates/agglayer-interop/: CHANGELOG.md  Cargo.toml
crates/agglayer-interop-grpc-types/: CHANGELOG.md  Cargo.toml
crates/agglayer-interop-grpc-types/src/compat/v1/: address.rs  aggchain_data.rs  bridge_exit.rs  bytes.rs  claim.rs  digest.rs  error.rs  global_index.rs  imported_bridge_exit.rs  l1_info_tree_leaf.rs  merkle_proof.rs  mod.rs  roots.rs  tests.rs  token_info.rs  u256.rs
crates/agglayer-interop-grpc-types/src/compat/v1/aggchain_data/: types_to_v1.rs  v1_to_types.rs
crates/agglayer-interop-grpc-types/src/compat/v1/snapshots/: agglayer_interop_grpc_types__compat__v1__tests__bad_data__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_data__display.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_data__kind.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_data_in_field__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_data_in_field__display.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_data_in_nested__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_data_in_nested__display.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_sig__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_sig__display.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_sig_in_nested__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__bad_sig_in_nested__display.snap  agglayer_interop_grpc_types__compat__v1__tests__failed_deser__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__failed_deser__display.snap  agglayer_interop_grpc_types__compat__v1__tests__failed_ser__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__failed_ser__display.snap  agglayer_interop_grpc_types__compat__v1__tests__no_proof__debug.snap  agglayer_interop_grpc_types__compat__v1__tests__no_proof__display.snap  agglayer_interop_grpc_types__compat__v1__tests__no_proof__kind.snap
crates/agglayer-interop-types/: CHANGELOG.md  Cargo.toml
crates/agglayer-interop-types/src/: aggchain_proof.rs  bincode.rs  lib.rs
crates/agglayer-interop-types/src/aggchain_proof/: mod.rs  test.rs
crates/agglayer-interop-types/src/aggchain_proof/snapshots/: agglayer_interop_types__aggchain_proof__test__ecdsa.snap  agglayer_interop_types__aggchain_proof__test__multisig-empty.snap  agglayer_interop_types__aggchain_proof__test__multisig-none.snap  agglayer_interop_types__aggchain_proof__test__multisig-onesig.snap
crates/agglayer-interop/src/: lib.rs
crates/agglayer-primitives/: CHANGELOG.md  Cargo.toml
crates/agglayer-primitives/src/: address.rs  bytes.rs  digest.rs  keccak.rs  lib.rs  signature.rs  utils.rs  vkey_hash.rs
crates/agglayer-tries/: CHANGELOG.md  Cargo.toml
crates/agglayer-tries/src/: error.rs  lib.rs  node.rs  proof.rs  roots.rs  smt.rs  utils.rs
crates/agglayer-tries/src/tests/: smt.rs
crates/pessimistic-proof/: Cargo.toml
crates/pessimistic-proof-core/: Cargo.toml
crates/pessimistic-proof-core/src/: aggchain_proof.rs  bridge_exit.rs  global_index.rs  imported_bridge_exit.rs  keccak.rs  lib.rs  local_balance_tree.rs  multi_batch_header.rs  nullifier_tree.rs  proof.rs
crates/pessimistic-proof-core/src/local_exit_tree/: hasher.rs
crates/pessimistic-proof-core/src/local_state/: commitment.rs  mod.rs
crates/pessimistic-proof/src/: bridge_exit.rs  imported_bridge_exit.rs  lib.rs  local_balance_tree.rs  local_state.rs  nullifier_tree.rs  proof.rs
crates/unified-bridge/: CHANGELOG.md  Cargo.toml
crates/unified-bridge/src/: aggchain_proof.rs  balance_tree.rs  bridge_exit.rs  global_index.rs  imported_bridge_exit.rs  lib.rs  network_id.rs  rollup_id.rs  rollup_index.rs  token_info.rs
crates/unified-bridge/src/local_exit_tree/: mod.rs  proof.rs
docs/knowledge-base/: book.toml
docs/knowledge-base/src/: introduction.md
docs/superpowers/plans/: 2026-04-10-agents-interop-adaptation.md
docs/superpowers/specs/: 2026-04-10-interop-agents-design.md
proto/: CHANGELOG.md
scripts/: fuzz.sh
scripts/make/: Makefile.changelog.toml  Makefile.fuzz.toml
(+24 files in other folders)
