[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
    'cfg(fuzzing)',
] }

[workspace.dependencies]
agglayer-blockchain = { path = "crates/agglayer-blockchain" }
agglayer-interop-types = { path = "crates/agglayer-interop-types" }
agglayer-interop-grpc-types = { path = "crates/agglayer-interop-grpc-types" }
agglayer-primitives = { path = "crates/agglayer-primitives" }
agglayer-tries = { path = "crates/agglayer-tries" }
unified-bridge = { path = "crates/unified-bridge" }

sp1-core-machine = "=4.1.4"
sp1-sdk = "=4.1.4"
sp1-primitives = "=4.1.4"
sp1-prover = "=4.1.4"
sp1-zkvm = { version = "=4.1.4", default-features = false }

alloy = { version = "0.8.1", features = ["full"] }
alloy-primitives = { version = "0.8.25", features = ["serde", "k256"] }
anyhow = "1.0.98"
arbitrary = { version = "1.4.1", features = ["derive"] }
arc-swap = "1.7.1"
async-trait = "0.1.88"
axum = "0.8.1"
base64 = "0.22.0"
bincode = "1.3.3"
bolero = { version = "0.13.0", features = ["arbitrary"] }
buildstructor = "0.5.4"
byteorder = "1.5.0"
clap = { version = "4.5.36", features = ["derive", "env"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
educe = "0.6.0"
ethers = "2.0.14"
ethers-gcp-kms-signer = "0.1.5"
ethers-signers = "2.0.14"
fail = { version = "0.5.1", default-features = false }
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "0.4"
http = "1.3.1"
hyper = "1.6.0"
insta = { version = "1.43.0", features = ["toml", "yaml", "json"] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
k256 = "0.13.4"
lazy_static = "1.5.0"
mockall = "0.13.1"
parking_lot = "0.12.3"
pbjson = "0.7.0"
pin-project = "1.1.9"
prost = "0.13.4"
rand = "0.9.0"
rs_merkle = { version = "1.4", default-features = false }
rstest = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
sha2 = "0.10.8"
test-log = "0.2.16"
thiserror = "2.0.11"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.14"
toml = "0.8.20"
tonic = { version = "0.12.3", default-features = false }
tonic-types = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
