[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agglayer/interop"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
    'cfg(fuzzing)',
] }

[workspace.dependencies]
agglayer-bincode = { path = "crates/agglayer-bincode" }
agglayer-evm-client = { path = "crates/agglayer-evm-client" }
agglayer-interop-types = { path = "crates/agglayer-interop-types", version = "0.6.0" }
agglayer-interop-grpc-types = { path = "crates/agglayer-interop-grpc-types", version = "0.6.0" }
agglayer-primitives = { path = "crates/agglayer-primitives", version = "0.6.0" }
agglayer-tries = { path = "crates/agglayer-tries", version = "0.6.0" }
unified-bridge = { path = "crates/unified-bridge", version = "0.6.0" }

sp1-build = "=5.0.0"
sp1-core-machine = "=5.0.0"
sp1-sdk = "=5.0.3"
sp1-primitives = "=5.0.0"
sp1-prover = "=5.0.1"
sp1-zkvm = { version = "=5.0.0", default-features = false }

alloy = { version = "0.14.0", features = ["full"] }
alloy-primitives = { version = "1.2", features = ["serde", "k256"] }
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
arc-swap = "1.7"
async-trait = "0.1.88"
axum = "0.8.1"
base64 = "0.22.0"
bincode = "1.3"
bolero = { version = "0.13.0", features = ["arbitrary"] }
buildstructor = "0.5.4"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
dotenvy = "0.15.7"
educe = "0.6.0"
ethers = "2.0"
ethers-gcp-kms-signer = "0.1.5"
ethers-signers = "2.0"
fail = { version = "0.5.1", default-features = false }
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "1.0"
http = "1.3"
hyper = "1.6"
insta = { version = "1.43", features = ["toml", "yaml", "json"] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
k256 = "0.13.4"
lazy_static = "1.5"
mockall = "0.13.1"
parking_lot = "0.12.4"
pbjson = "0.7.0"
pin-project = "1.1"
prost = "0.13.4"
rand = "0.9.0"
rs_merkle = { version = "1.4", default-features = false }
rstest = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
sha2 = "0.10.9"
test-log = "0.2.16"
thiserror = "2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.14"
toml = "0.8.20"
tonic = { version = "0.13.1", default-features = false }
tonic-types = "0.13.1"
tower = "0.5.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
