[workspace]
resolver = "2"
members = ["crates/*", "crates/agglayer-elf-build/sample-program/*"]

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agglayer/interop"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
    'cfg(fuzzing)',
] }

[workspace.dependencies]
agglayer-bincode = { path = "crates/agglayer-bincode", version = "0.12.0" }
agglayer-elf-build = { path = "crates/agglayer-elf-build", version = "0.12.0" }
agglayer-evm-client = { path = "crates/agglayer-evm-client", version = "0.12.0" }
agglayer-interop-types = { path = "crates/agglayer-interop-types", version = "0.12.0" }
agglayer-interop-grpc-types = { path = "crates/agglayer-interop-grpc-types", version = "0.12.0" }
agglayer-primitives = { path = "crates/agglayer-primitives", version = "0.12.0" }
agglayer-tries = { path = "crates/agglayer-tries", version = "0.12.0" }
unified-bridge = { path = "crates/unified-bridge", version = "0.12.0" }

sp1-build = "=5.2.2"
sp1-core-machine = "=5.2.2"
sp1-sdk = "=5.2.2"
sp1-primitives = "=5.2.2"
sp1-prover = "=5.2.2"
sp1-zkvm = { version = "=5.2.2", default-features = false }

alloy = { version = "1.1.3", features = ["full"] }
alloy-primitives = { version = "1.4.1", features = ["serde", "k256"] }
arbitrary = { version = "1.4.2", features = ["derive"] }
arc-swap = "1.7"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
bincode = "3.0"
bolero = { version = "0.13.4", features = ["arbitrary"] }
buildstructor = "0.5.4"
byteorder = "1.5"
cargo_metadata = "0.18"
clap = { version = "4.5.53", features = ["derive", "env"] }
color-eyre = "0.6.5"
derive_more = { version = "2.1", features = [
    "from",
    "into",
    "from_str",
    "as_ref",
    "display",
] }
dirs = "5.0"
dotenvy = "0.15.7"
educe = "0.6.0"
eyre = "0.6.12"
fail = { version = "0.5.1", default-features = false }
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "1.1"
http = "1.4"
hyper = "1.8"
insta = { version = "1.44", features = ["toml", "yaml", "json"] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
k256 = "0.13.4"
lazy_static = "1.5"
mockall = "0.14.0"
parking_lot = "0.12.5"
pbjson = "0.9.0"
pin-project = "1.1"
prost = "0.13.4"
rand = "0.9.2"
rs_merkle = { version = "1.4", default-features = false }
rstest = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"
sha2 = "0.10.9"
test-log = "0.2.16"
thiserror = "2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"
toml = "0.8.20"
tonic = { version = "0.13.1", default-features = false }
tonic-types = "0.13.1"
tower = "0.5.2"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
