[package]
name = "agglayer-bincode"
description = "Agglayer Bincode utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "agglayer-bincode contains bincode serialization and deserialization for agglayer protocol."
repository.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true

[dev-dependencies]
unified-bridge.workspace = true

sp1-sdk.workspace = true
