[package]
name = "agglayer-blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
testutils = ["dep:mockall"]

[lints]
workspace = true

[dependencies]
agglayer-primitives.workspace = true

alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
agglayer-blockchain = { workspace = true, features = ["testutils"] }
