[package]
name = "agglayer-build"
description = "Building zkvm elf binaries, Agglayer-style."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
clap.workspace = true

sp1-build.workspace = true

[dev-dependencies]
rstest.workspace = true
