[package]
name = "agglayer-elf-build"
description = "Building zkvm elf binaries, Agglayer-style."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cargo_metadata.workspace = true
clap.workspace = true
eyre.workspace = true

sp1-build.workspace = true

[dev-dependencies]
rstest.workspace = true
