[package]
name = "agglayer-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tracing"]

[lints]
workspace = true

[dependencies]
eyre.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
thiserror.workspace = true
