[package]
name = "agglayer-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Error handling utilities with tracing integration and pattern matching macros for eyre errors"

[features]
default = ["tracing"]

[lints]
workspace = true

[dependencies]
eyre.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
thiserror.workspace = true
