[package]
name = "agglayer-evm-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "agglayer-evm-client contains the client use to communicate with EVM rpc."
repository.workspace = true

[features]
testutils = ["dep:mockall"]

[lints]
workspace = true

[dependencies]
agglayer-primitives.workspace = true

alloy.workspace = true
async-trait.workspace = true
eyre.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
agglayer-evm-client = { path = ".", features = ["testutils"] }
