[package]
name = "agglayer-interop-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
testutils = ["dep:arbitrary", "dep:ethers", "unified-bridge/testutils"]

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
unified-bridge.workspace = true

sp1-sdk.workspace = true
sp1-core-machine.workspace = true
sp1-prover.workspace = true

arbitrary = { workspace = true, optional = true }
bincode.workspace = true
educe.workspace = true
ethers = { workspace = true, optional = true }
hex.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
agglayer-interop-types = { workspace = true, features = ["testutils"] }
