[package]
name = "agglayer-interop-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "agglayer-interop-types contains structs and traits for the interoperability layer of agglayer."
repository.workspace = true

[features]
default = []
testutils = ["dep:arbitrary", "unified-bridge/testutils"]

[dependencies]
agglayer-bincode.workspace = true
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
unified-bridge.workspace = true

sp1-sdk.workspace = true
sp1-core-machine.workspace = true
sp1-prover.workspace = true

arbitrary = { workspace = true, optional = true }
bincode.workspace = true
educe.workspace = true
hex.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
agglayer-interop-types = { path = ".", features = ["testutils"] }
