[package]
name = "agglayer-interop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-interop-types = { workspace = true }
agglayer-grpc-types = { workspace = true, optional = true }

[features]
default = []

grpc = ["dep:agglayer-grpc-types"]
grpc-compat = ["grpc", "agglayer-grpc-types/compat"]

[lints]
workspace = true
