[package]
name = "agglayer-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["keccak"]
keccak = ["dep:tiny-keccak"]
testutils = ["alloy-primitives/arbitrary", "dep:arbitrary", "dep:rand"]

[dependencies]
alloy-primitives.workspace = true
arbitrary = { workspace = true, optional = true }
byteorder = "1.5.0"
k256 = "0.13.4"
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
rand = { version = "0.9.0", optional = true }
tiny-keccak = { optional = true, git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = [
    "keccak",
] }

[dev-dependencies]
rand = "0.9.0"

[lints]
workspace = true
