[package]
name = "agglayer-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "agglayer-primitives contains various structs and traits that are the ground of agglayer protocol."
repository.workspace = true

[features]
default = ["keccak"]
keccak = ["dep:tiny-keccak"]
testutils = ["alloy-primitives/arbitrary", "dep:arbitrary", "dep:rand"]

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
arbitrary = { workspace = true, optional = true }
byteorder.workspace = true
derive_more.workspace = true
k256.workspace = true
serde.workspace = true
hex.workspace = true
rand = { workspace = true, optional = true }
tiny-keccak = { workspace = true, optional = true }

[dev-dependencies]
agglayer-primitives = { path = ".", features = ["testutils"] }
