[package]
name = "agglayer-tries"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-primitives.workspace = true

serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true

[dev-dependencies]
agglayer-primitives = { workspace = true, features = ["testutils"] }
rand = "0.9.1"
rs_merkle = { version = "1.4", default-features = false }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = [
    "keccak",
] }

[lints]
workspace = true
