[package]
name = "unified-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
zkvm = []
testutils = ["dep:arbitrary", "agglayer-primitives/testutils"]

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true

arbitrary = { workspace = true, optional = true }
hex-literal = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
thiserror.workspace = true

[dev-dependencies]
agglayer-primitives = { workspace = true, features = ["testutils"] }
hex.workspace = true
rand = "0.9.0"
rs_merkle = { version = "1.4", default-features = false }

[lints]
workspace = true
