[package]
name = "unified-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
zkvm = []
testutils = ["dep:arbitrary", "agglayer-primitives/testutils"]

[lints]
workspace = true

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true

arbitrary = { workspace = true, optional = true }
hex-literal.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
unified-bridge = { workspace = true, features = ["testutils"] }
hex.workspace = true
rand.workspace = true
rs_merkle.workspace = true
